Devoir 1: modèle LaTeX

--- a/devoir1/exemple.tex
+++ b/devoir1/exemple.tex
@@ -79,9 +79,19 @@
 
 \section*{Question 2}
 
-$\sigma_i \models \varphi_j$ car...
+\begin{enumerate}[(a)]
+\item
+  
+  \begin{enumerate}[(i)]
+  \item $\sigma_i \models \varphi_j$ car...
+    
+  \item $\{p\}\{p\}\{p, q\}\{r\}^\omega \not\models \varphi_k$ car...
+    
+  \item ...
+  \end{enumerate}
 
-$\{p\}\{p\}\{p, q\}\{r\}^\omega \not\models \varphi_k$ car...
+\item ...
+\end{enumerate}
 
 \section*{Question 3}
 
